<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_creacion_developer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_constraint"
    android:scrollbars="vertical"
    app:layout_scrollEffect="none"
    tools:context=".Developer_creacion">

    <EditText
        android:id="@+id/txt_ingresos_anuales"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/hint_ingresos_anuales"
        android:inputType="numberDecimal"
        android:textColor="@color/texts_inputs_developers"
        android:textColorHint="@color/texts_inputs_developers"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_total_juegos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_total_juegos"
        app:layout_constraintTop_toBottomOf="@+id/lbl_total_juegos" />

    <TextView
        android:id="@+id/lbl_ingresos_anuales"
        android:layout_width="@dimen/lbl_width"
        android:layout_height="@dimen/lbl_height"
        android:layout_marginTop="96dp"
        android:text="@string/lbl_total_juegos"
        android:textColor="@color/labels_creacion_developer"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_datos_fecha_fundacion"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="@+id/txt_datos_fecha_fundacion"
        app:layout_constraintTop_toBottomOf="@+id/txt_datos_fecha_fundacion" />

    <TextView
        android:id="@+id/lbl_titulo_creacion_cocinero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_titulo_developers"
        android:text="@string/lbl_titulo_creacion_developer"
        android:textAlignment="center"
        android:textColor="@color/titulo_lista_developers"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/lbl_datos_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_datos_developer"
        android:textAllCaps="false"
        android:textColor="#245359"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="@+id/lbl_titulo_creacion_cocinero"
        app:layout_constraintTop_toBottomOf="@+id/lbl_titulo_creacion_cocinero" />

    <TextView
        android:id="@+id/lbl_nombre"
        android:layout_width="@dimen/lbl_width"
        android:layout_height="@dimen/lbl_height"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_nombre"
        android:textColor="@color/labels_creacion_developer"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_datos_developer" />

    <TextView
        android:id="@+id/lbl_datos_fecha_fundacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/lbl_datos_fecha_fundacion"
        android:textColor="#245359"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/lbl_datos_developer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_datos_developer"
        app:layout_constraintTop_toBottomOf="@+id/lbl_datos_developer" />

    <TextView
        android:id="@+id/lbl_total_juegos"
        android:layout_width="@dimen/lbl_width"
        android:layout_height="@dimen/lbl_height"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_total_juegos"
        android:textColor="@color/labels_creacion_developer"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_datos_fecha_fundacion"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="@+id/txt_datos_fecha_fundacion"
        app:layout_constraintTop_toBottomOf="@+id/txt_datos_fecha_fundacion" />

    <TextView
        android:id="@+id/lbl_fecha_fundacion"
        android:layout_width="@dimen/lbl_width"
        android:layout_height="@dimen/lbl_height"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/lbl_datos_fecha_fundacion"
        android:textColor="@color/labels_creacion_developer"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lbl_datos_fecha_fundacion"
        app:layout_constraintTop_toBottomOf="@+id/lbl_datos_fecha_fundacion" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:textColor="@color/texts_inputs_developers"
        android:textColorHint="@color/texts_inputs_developers"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_nombre"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nombre" />

    <EditText
        android:id="@+id/txt_datos_fecha_fundacion"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:ems="10"
        android:hint="@string/hint_datos_fecha_fundacion"
        android:inputType="text"
        android:textColor="@color/texts_inputs_developers"
        android:textColorHint="@color/texts_inputs_developers"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_fecha_fundacion"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="@+id/lbl_fecha_fundacion"
        app:layout_constraintTop_toBottomOf="@+id/lbl_fecha_fundacion" />

    <EditText
        android:id="@+id/txt_total_juegos"
        android:layout_width="@dimen/txt_width"
        android:layout_height="@dimen/txt_height"
        android:ems="10"
        android:hint="@string/hint_total_juegos"
        android:inputType="numberDecimal"
        android:textColor="@color/texts_inputs_developers"
        android:textColorHint="@color/texts_inputs_developers"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/lbl_total_juegos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lbl_total_juegos"
        app:layout_constraintTop_toBottomOf="@+id/lbl_total_juegos" />

    <Button
        android:id="@+id/btn_guardar_developer"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:background="@color/bg_btn_crear_developers"
        android:text="Guardar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresos_anuales" />
</androidx.constraintlayout.widget.ConstraintLayout>